--- a/Views/Shared/TaskTableTest.cshtml
+++ b/Views/Shared/TaskTableTest.cshtml
@@ -55,7 +55,7 @@
                     <td>@task.priority</td>
                     <td>@task.comment</td>
                     <td>@task.plannedTime</td>
-                    <td>@task.actualTime</td>
+                    <td>@task.actualTime.ToString(@"hh\:mm\:ss")</td>
                     <td>@task.start</td>
                     <td>@task.finish</td>
                 </tr>
@@ -93,7 +93,7 @@
                     <td>@task.priority</td>
                     <td>@task.comment</td>
                     <td>@task.plannedTime</td>
-                    <td>@task.actualTime</td>
+                    <td>@task.actualTime.ToString(@"hh\:mm\:ss")</td>
                     <td>@task.start</td>
                     <td>@task.finish</td>
                 </tr>
@@ -131,7 +131,7 @@
                     <td>@task.priority</td>
                     <td>@task.comment</td>
                     <td>@task.plannedTime</td>
-                    <td>@task.actualTime</td>
+                    <td>@task.actualTime.ToString(@"hh\:mm\:ss")</td>
                     <td>@task.start</td>
                     <td>@task.finish</td>
                 </tr>
