--- a/Views/Home/TaskTable.cshtml
+++ b/Views/Home/TaskTable.cshtml
@@ -39,6 +39,13 @@
                 <p>Сотрудники</p>
             </div>
 
+            <div>
+                <a asp-controller="Login" asp-action="Index">
+                    <button style="width:100%" class="btn btn__top-bar" type="button">Выйти</button>
+                </a>
+            </div>
+           
+
         </aside>
         <div class="content">
             <div class="first-box">
@@ -82,6 +89,8 @@
                                 <option>Все проекты</option>
                                 <option>Проекты в архиве</option>
                             </select>
+
+
                             <select class="select" id="select" name="supervisorProjectFilter">
                                 <option value="@Model.filterSupProj" selected hidden>@Model.filterSupProj</option>
                                 <option>Все ГИПы</option>
@@ -90,6 +99,8 @@
                                     <option>@staff.name</option>
                                 }
                             </select>
+
+
 
                             <select class="select" id="select" name="recipientProjectFilter">
                                 <option value="@Model.filterResProj" selected hidden>@Model.filterResProj</option>
@@ -106,6 +117,8 @@
 
                                 }
                             </select>
+
+
                             <a>
                                 <button class="btn btn__top-bar" type="submit">Отфильтровать</button>
                             </a>
@@ -125,7 +138,6 @@
                                     <button class="btn btn__top-bar" type="button">Добавить проект</button>
                                 </a>}
 
-
                             <select class="select" id="select" name="staffTableFilter">
                                 <option value="@Model.filterStaff" selected hidden>@Model.filterStaff</option>
                                 <option>Все должности</option>
@@ -134,6 +146,8 @@
                                     <option>@post.name</option>
                                 }
                             </select>
+
+
                             <a>
                                 <button class="btn btn__top-bar" type="submit">Отфильтровать</button>
                             </a>
