--- a/Views/Shared/TaskCreate.cshtml
+++ b/Views/Shared/TaskCreate.cshtml
@@ -35,7 +35,9 @@
     <label>Комментарий</label>
     <textarea name="comment" asp-for="@Model.nullTask.comment" class="form-control"></textarea>
 
-
+    @{ 
+        List<Staff> RG = new List<Staff>();
+    }
 
     <label>Ответственный </label>
     <select name="supervisor">
@@ -71,24 +73,28 @@
         }
         else if (ViewBag.Role == "НО")
         {
-            @foreach (var staff in Model.staffs.Where(p =>p.roleId == 5))
+            @foreach (var staff in Model.staffs.Where(p => p.roleId == 5))
             {
-                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
+                <option>@staff.name</option>
             }
-            @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
+            @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 1))
             {
-                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
+                <option>@staff.name</option>
+                RG.Add(staff);
             }
-            @foreach (var staff in Model.staffs.Where(p => p.roleId == 2 ))
+            foreach (var staff in RG)
             {
-                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
+                foreach (var staff1 in Model.staffs.Where(p => p.supervisorCod == staff.code && p.roleId == 2))
+                {
+                    <option>@staff1.name</option>
+                }
             }
         }
         else if (ViewBag.Role == "РГ")
         {
-            @foreach (var staff in Model.staffs.Where(p => p.roleId == 2))
+            @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 2))
             {
-                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
+                <option>@staff.name</option>
             }
         }
     </select>
@@ -100,40 +106,55 @@
         <option value="@Model.nullTask.recipient" selected hidden></option>
         @if (ViewBag.Role == "Директор")
         {
-            @foreach (var staff in Model.staffs.Where(p => p.roleId == 4))
+            @foreach (var staff in Model.staffs.Where(p => p.roleId == 5))
             {
-                <option>@staff.name</option>
+                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
             }
             @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
             {
-                <option>@staff.name</option>
+                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
             }
         }
         else if (ViewBag.Role == "ГИП")
         {
+            @foreach (var staff in Model.staffs.Where(p => p.roleId == 6))
+            {
+                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
+            }
             @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
             {
-                <option>@staff.name</option>
+                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
             }
         }
         else if (ViewBag.Role == "Помощник ГИПа")
         {
-            @foreach (var staff in Model.staffs.Where(p => p.roleId == 5 ))
+            @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
             {
-                <option>@staff.name</option>
-            }
-            @foreach (var staff in Model.staffs.Where(p => p.roleId == 2 ))
-            {
-                <option>@staff.name</option>
-            }
-            @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
-            {
-                <option>@staff.name</option>
+                <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
             }
         }
         else if (ViewBag.Role == "НО")
         {
-            @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
+            @foreach (var staff in Model.staffs.Where(p => p.roleId == 5))
+            {
+                <option>@staff.name</option>
+            }
+            @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 1))
+            {
+                <option>@staff.name</option>
+                RG.Add(staff);
+            }
+            foreach (var staff in RG)
+            {
+                foreach (var staff1 in Model.staffs.Where(p => p.supervisorCod == staff.code && p.roleId == 2))
+                {
+                    <option>@staff1.name</option>
+                }
+            }
+        }
+        else if (ViewBag.Role == "РГ")
+        {
+            @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 2))
             {
                 <option>@staff.name</option>
             }
