--- a/Views/Shared/TaskRedact.cshtml
+++ b/Views/Shared/TaskRedact.cshtml
@@ -17,6 +17,7 @@
         var staffPost = Model.staffs.FirstOrDefault(p => p.name == Model.redactedTask.supervisor).post;
         var supervisorRoleCode = Model.posts.FirstOrDefault(p => p.name == staffPost).roleCod;
         var supervisorRoleId = Model.roles.FirstOrDefault(p => p.code == supervisorRoleCode).id;
+        List<Staff> RG = new List<Staff>();
     }
 
     @if (Model.redactedTask.date.Date >= DateTime.Now.Date &&
@@ -50,7 +51,7 @@ roleSessionId >= supervisorRoleId)
          <option asp-for="@Model.redactedTask.supervisor" selected hidden>@Model.redactedTask.supervisor</option>
          @if (ViewBag.Role == "Директор")
          {
-             @foreach (var staff in Model.staffs.Where(p => p.roleId == 5 || p.roleId == 3))
+             @foreach (var staff in Model.staffs.Where(p => p.roleId == 5))
              {
                  <option>@staff.name</option>
              }
@@ -79,22 +80,26 @@ roleSessionId >= supervisorRoleId)
          }
          else if (ViewBag.Role == "НО")
          {
-             @foreach (var staff in Model.staffs.Where(p => p.roleId == 5 ))
+             @foreach (var staff in Model.staffs.Where(p => p.roleId == 5))
              {
                  <option>@staff.name</option>
              }
-             @foreach (var staff in Model.staffs.Where(p =>p.roleId == 2 ))
+             @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 1))
              {
                  <option>@staff.name</option>
+                 RG.Add(staff);
              }
-             @foreach (var staff in Model.staffs.Where(p =>p.roleId == 1))
+             foreach (var staff in RG)
              {
-                 <option>@staff.name</option>
+                 foreach (var staff1 in Model.staffs.Where(p => p.supervisorCod == staff.code && p.roleId == 2))
+                 {
+                        <option>@staff1.name</option>
+                 }
              }
          }
          else if (ViewBag.Role == "РГ")
          {
-             @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
+             @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 2))
              {
                  <option>@staff.name</option>
              }
@@ -115,7 +120,7 @@ roleSessionId >= supervisorRoleId)
             <option asp-for="@Model.redactedTask.recipient" selected hidden>@Model.redactedTask.recipient</option>
             @if (ViewBag.Role == "Директор")
             {
-                @foreach (var staff in Model.staffs.Where(p => p.roleId == 4 || p.roleId == 3))
+                @foreach (var staff in Model.staffs.Where(p => p.roleId == 5))
                 {
                     <option>@staff.name</option>
                 }
@@ -126,6 +131,10 @@ roleSessionId >= supervisorRoleId)
             }
             else if (ViewBag.Role == "ГИП")
             {
+                @foreach (var staff in Model.staffs.Where(p => p.roleId == 4))
+                {
+                    <option>@staff.name</option>
+                }
                 @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
                 {
                     <option>@staff.name</option>
@@ -133,22 +142,33 @@ roleSessionId >= supervisorRoleId)
             }
             else if (ViewBag.Role == "Помощник ГИПа")
             {
-                @foreach (var staff in Model.staffs.Where(p => p.roleId == 5 ))
-                {
-                    <option>@staff.name</option>
-                }
-                @foreach (var staff in Model.staffs.Where(p =>p.roleId == 2))
-                {
-                    <option>@staff.name</option>
-                }
-                @foreach (var staff in Model.staffs.Where(p =>p.roleId == 1))
+                @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
                 {
                     <option>@staff.name</option>
                 }
             }
             else if (ViewBag.Role == "НО")
             {
-                @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
+                @foreach (var staff in Model.staffs.Where(p => p.roleId == 5))
+                {
+                    <option>@staff.name</option>
+                }
+                @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 1))
+                {
+                    <option>@staff.name</option>
+                    RG.Add(staff);
+                }
+                foreach (var staff in RG)
+                {
+                    foreach (var staff1 in Model.staffs.Where(p => p.supervisorCod == staff.code && p.roleId == 2))
+                    {
+                        <option>@staff1.name</option>
+                    }
+                }
+            }
+            else if (ViewBag.Role == "РГ")
+            {
+                @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 2))
                 {
                     <option>@staff.name</option>
                 }
