--- a/Views/Shared/TaskRedact.cshtml
+++ b/Views/Shared/TaskRedact.cshtml
@@ -51,40 +51,40 @@ roleSessionId >= supervisorRoleId)
          <option asp-for="@Model.redactedTask.supervisor" selected hidden>@Model.redactedTask.supervisor</option>
          @if (ViewBag.Role == "Директор")
          {
-             @foreach (var staff in Model.staffs.Where(p => p.roleId == 5))
+             @foreach (var staff in Model.staffs.Where(p => p.roleId == 6))
              {
-                 <option>@staff.name</option>
+                 <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
              }
-             @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
+             @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
              {
-                 <option>@staff.name</option>
+                 <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
              }
          }
          else if (ViewBag.Role == "ГИП")
          {
              @foreach (var staff in Model.staffs.Where(p => p.roleId == 4))
              {
-                 <option>@staff.name</option>
+                 <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
              }
-             @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
+             @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
              {
-                 <option>@staff.name</option>
+                 <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
              }
          }
          else if (ViewBag.Role == "Помощник ГИПа")
          {
-             @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
+             @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
              {
-                 <option>@staff.name</option>
+                 <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
              }
          }
          else if (ViewBag.Role == "НО")
          {
-             @foreach (var staff in Model.staffs.Where(p => p.roleId == 5))
+             @foreach (var staff in Model.staffs.Where(p => p.roleId == 6))
              {
                  <option>@staff.name</option>
              }
-             @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 1))
+             @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 3))
              {
                  <option>@staff.name</option>
                  RG.Add(staff);
@@ -93,7 +93,7 @@ roleSessionId >= supervisorRoleId)
              {
                  foreach (var staff1 in Model.staffs.Where(p => p.supervisorCod == staff.code && p.roleId == 2))
                  {
-                        <option>@staff1.name</option>
+                     <option>@staff1.name</option>
                  }
              }
          }
@@ -120,40 +120,40 @@ roleSessionId >= supervisorRoleId)
             <option asp-for="@Model.redactedTask.recipient" selected hidden>@Model.redactedTask.recipient</option>
             @if (ViewBag.Role == "Директор")
             {
-                @foreach (var staff in Model.staffs.Where(p => p.roleId == 5))
+                @foreach (var staff in Model.staffs.Where(p => p.roleId == 6))
                 {
-                    <option>@staff.name</option>
+                    <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
                 }
-                @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
+                @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
                 {
-                    <option>@staff.name</option>
+                    <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
                 }
             }
             else if (ViewBag.Role == "ГИП")
             {
                 @foreach (var staff in Model.staffs.Where(p => p.roleId == 4))
                 {
-                    <option>@staff.name</option>
+                    <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
                 }
-                @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
+                @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
                 {
-                    <option>@staff.name</option>
+                    <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
                 }
             }
             else if (ViewBag.Role == "Помощник ГИПа")
             {
-                @foreach (var staff in Model.staffs.Where(p => p.roleId == 3))
+                @foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
                 {
-                    <option>@staff.name</option>
+                    <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
                 }
             }
             else if (ViewBag.Role == "НО")
             {
-                @foreach (var staff in Model.staffs.Where(p => p.roleId == 5))
+                @foreach (var staff in Model.staffs.Where(p => p.roleId == 6))
                 {
                     <option>@staff.name</option>
                 }
-                @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 1))
+                @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 3))
                 {
                     <option>@staff.name</option>
                     RG.Add(staff);
