--- a/Views/Shared/TaskTableTest.cshtml
+++ b/Views/Shared/TaskTableTest.cshtml
@@ -29,7 +29,7 @@
             foreach (Task task in Model.tasks.Where(p => p.status == "Выполнена").OrderBy(p => p.date))
             {
                 <tr id="task">
-                    <th>@task.date.ToShortDateString()</th>
+                    <th>@task.date.Date.ToString(@"dd\.MM\.yyyy")</th>
                     <td>@task.code</td>
                     <td>@task.projectCode</td>
                     <td>
@@ -67,7 +67,7 @@
             foreach (Task task in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date.Date <= DateTime.Now.Date).OrderBy(p => p.date))
             {
                 <tr id="task">
-                    <th>@task.date.Date.ToShortDateString()</th>
+                    <th>@task.date.Date.ToString(@"dd\.MM\.yyyy")</th>
                     <td>@task.code</td>
                     <td>@task.projectCode</td>
                     <td>
@@ -105,7 +105,7 @@
             foreach (Task task in Model.tasks.Where(p => p.date.Date > DateTime.Now.Date).OrderBy(p => p.date))
             {
                 <tr id="task">
-                    <th>@task.date.ToShortDateString()</th>
+                    <th>@task.date.Date.ToString(@"dd\.MM\.yyyy")</th>
                     <td>@task.code</td>
                     <td>@task.projectCode</td>
                     <td>
