--- a/Views/Shared/TaskTableTest.cshtml
+++ b/Views/Shared/TaskTableTest.cshtml
@@ -26,9 +26,10 @@
         if (i == 0)
         {
             <tr id="title"><th style="text-align:left" colspan="13">Выполненные задачи</th></tr>
+
             foreach (Task task in Model.tasks.Where(p => p.status == "Выполнена").OrderBy(p => p.date))
             {
-                <tr id="task">
+                <tr id="finish-task">
                     <th>@task.date.Date.ToString(@"dd\.MM\.yyyy")</th>
                     <td>@task.code</td>
                     <td>@task.projectCode</td>
@@ -38,33 +39,23 @@
                         </a>
                     </td>
                     <td>
-                        <form class="form" method="post">
-                            <select name="stat" asp-for="@task.status">
-                                <option value="@task.status" selected hidden>@task.status</option>
-                                <option asp-for="stat">Создана</option>
-                                <option asp-for="stat">В работе</option>
-                                <option asp-for="stat">На паузе</option>
-                                <option asp-for="stat">Выполнена</option>
-                            </select>
-                            <input class="btn-white" type="submit" value="Сохранить"
-                                   asp-controller="Home" asp-action="RedactSatusTask" asp-route-activTable="0" asp-route-id="@task.id" />
-                        </form>
+                        Выполнена
                     </td>
                     <td>@task.supervisor</td>
                     <td>@task.recipient</td>
                     <td>@task.priority</td>
                     <td>@task.comment</td>
                     <td>@task.plannedTime</td>
-                    <td>@task.actualTime.ToString(@"hh\:mm\:ss")</td>
-                    <td>@task.start</td>
-                    <td>@task.finish</td>
+                    <td>@task.actualTime.ToString(@"hh\:mm")</td>
+                    <td>@task.start.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                    <td>@task.finish.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
                 </tr>
             }
         }
         if (i == 1)
         {
             <tr id="title"><th style="text-align:left" colspan="13">Задачи на сегодня</th></tr>
-            foreach (Task task in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date.Date <= DateTime.Now.Date).OrderBy(p => p.date))
+            foreach (Task task in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date.Date <= DateTime.Now.Date).OrderBy(p => p.priority))
             {
                 <tr id="task">
                     <th>@task.date.Date.ToString(@"dd\.MM\.yyyy")</th>
@@ -79,7 +70,6 @@
                         <form class="form" method="post">
                             <select name="stat" asp-for="@task.status">
                                 <option value="@task.status" selected hidden>@task.status</option>
-                                <option asp-for="stat">Создана</option>
                                 <option asp-for="stat">В работе</option>
                                 <option asp-for="stat">На паузе</option>
                                 <option asp-for="stat">Выполнена</option>
@@ -93,9 +83,9 @@
                     <td>@task.priority</td>
                     <td>@task.comment</td>
                     <td>@task.plannedTime</td>
-                    <td>@task.actualTime.ToString(@"hh\:mm\:ss")</td>
-                    <td>@task.start</td>
-                    <td>@task.finish</td>
+                    <td>@task.actualTime.ToString(@"hh\:mm")</td>
+                    <td>@task.start.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                    <td>@task.finish.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
                 </tr>
             }
         }
@@ -117,13 +107,12 @@
                         <form class="form" method="post">
                             <select name="stat" asp-for="@task.status">
                                 <option value="@task.status" selected hidden>@task.status</option>
-                                <option asp-for="stat">Создана</option>
                                 <option asp-for="stat">В работе</option>
                                 <option asp-for="stat">На паузе</option>
                                 <option asp-for="stat">Выполнена</option>
                             </select>
                             <input class="btn-white" type="submit" value="Сохранить"
-                                   asp-controller="Home" asp-action="RedactSatusTask" asp-route-activTable="0" asp-route-id="@task.id" />
+                                   asp-controller="Home" asp-action="RedactSatusTask" asp-route-supervisor="@task.supervisor" asp-route-activTable="0" asp-route-id="@task.id" />
                         </form>
                     </td>
                     <td>@task.supervisor</td>
@@ -131,9 +120,9 @@
                     <td>@task.priority</td>
                     <td>@task.comment</td>
                     <td>@task.plannedTime</td>
-                    <td>@task.actualTime.ToString(@"hh\:mm\:ss")</td>
-                    <td>@task.start</td>
-                    <td>@task.finish</td>
+                    <td>@task.actualTime.ToString(@"hh\:mm")</td>
+                    <td>@task.start.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                    <td>@task.finish.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
                 </tr>
             }
         }
