--- a/Views/Shared/ProjectTableTest.cshtml
+++ b/Views/Shared/ProjectTableTest.cshtml
@@ -42,7 +42,7 @@
                 if (project.archive == "Нет")
                 {
                     <th style="background-color:green">
-                        <p>@date.ToShortDateString()</p>
+                        <p>@date.Date.ToString(@"dd\.MM\.yyyy")</p>
                         <p>Дней осталось: @day.Days </p>
                     </th>
                 }
@@ -59,7 +59,7 @@
                 if (project.archive == "Нет")
                 {
                     <th style="background-color:red">
-                        <p>@date.ToShortDateString()</p>
+                        <p>@date.Date.ToString(@"dd\.MM\.yyyy")</p>
                         <p>Дней Просрочено: @(day.Days * -1) </p>
                     </th>
                 }
@@ -105,13 +105,13 @@
             for (int j = 0; j < Taskss.Count(); j++)
             {
                 if (j + 1 != Taskss.Count() && Taskss[j + 1].date.Date == Taskss[j].date.Date) continue;
-                <tr id="task">
-                    <th colspan="2">@Taskss[j].date.ToShortDateString()</th>
+                <tr id="finish-task">
+                    <th colspan="2">@Taskss[j].date.Date.ToString(@"dd\.MM\.yyyy")</th>
                     @foreach (Project project in Model.filterResProj != "Все ответственные" ? Model.projects.Where(p => projCod.Contains(p.code)).OrderBy(p => p.code) : Model.projects.OrderBy(p => p.code))
                     {
                         if (Model.projectTasks.Where(p => p.projectCode == project.code).Where(p => p.date == Taskss[j].date).Where(p => p.status == "Выполнена").Count() == 0)
                         {
-                            <td>Нет задач</td>
+                            <td>-</td>
                         }
                         else
                         {
@@ -133,17 +133,17 @@
             <tr id="title">
                 <th colspan="@(Model.projects.Count()+2)" style="text-align:left ;background-color:#cccccc">Задачи на сегодня</th>
             </tr>
-            List<Task> Taskss = Model.projectTasks.Where(p => p.status != "Выполнена").Where(p => p.date.Date <= DateTime.Now.Date).OrderBy(p => p.date).ToList();
+            List<Task> Taskss = Model.projectTasks.Where(p => p.status != "Выполнена").Where(p => p.date.Date <= DateTime.Now.Date).OrderBy(p => p.priority).ToList();
             for (int j = 0; j < Taskss.Count(); j++)
             {
                 if (j + 1 != Taskss.Count() && Taskss[j].date.Date == Taskss[j + 1].date.Date) continue;
                 <tr id="task">
-                    <th colspan="2">@Taskss[j].date.ToShortDateString()</th>
+                    <th colspan="2">@Taskss[j].date.Date.ToString(@"dd\.MM\.yyyy")</th>
                     @foreach (Project project in Model.filterResProj != "Все ответственные" ? Model.projects.Where(p => projCod.Contains(p.code)).OrderBy(p => p.code) : Model.projects.OrderBy(p => p.code))
                     {
                         if (Model.projectTasks.Where(p => p.projectCode == project.code).Where(p => p.date.Date == Taskss[j].date.Date).Where(p => p.status != "Выполнена").Count() == 0)
                         {
-                            <td>Нет задач</td>
+                            <td>-</td>
                         }
                         else
                         {
@@ -170,12 +170,12 @@
             {
                 if (j + 1 != Taskss.Count() && Taskss[j].date.Date == Taskss[j + 1].date.Date) continue;
                 <tr id="task">
-                    <th colspan="2">@Taskss[j].date.ToShortDateString()</th>
+                    <th colspan="2">@Taskss[j].date.Date.ToString(@"dd\.MM\.yyyy")</th>
                     @foreach (Project project in Model.filterResProj != "Все ответственные" ? Model.projects.Where(p => projCod.Contains(p.code)).OrderBy(p => p.code) : Model.projects.OrderBy(p => p.code))
                     {
                         if (Model.projectTasks.Where(p => p.projectCode == project.code).Where(p => p.date.Date == Taskss[j].date.Date).Where(p => p.status != "Выполнена").Count() == 0)
                         {
-                            <td>Нет задач</td>
+                            <td>-</td>
                         }
                         else
                         {
