--- a/Views/Shared/StaffTableTest.cshtml
+++ b/Views/Shared/StaffTableTest.cshtml
@@ -29,18 +29,34 @@
             for (int j = 0; j < Taskss.Count(); j++)
             {
                 if (j + 1 != Taskss.Count() && Taskss[j].date.Date == Taskss[j + 1].date.Date) continue;
-                <tr id="task">
-                    <th colspan="2">@Taskss[j].date.ToShortDateString()</th>
+                <tr id="finish-task">
+                    <th colspan="2">@Taskss[j].date.Date.ToString(@"dd\.MM\.yyyy")</th>
                     @foreach (Staff staff in Model.staffsTable.OrderBy(p => p.name))
                     {
-                        if (Model.tasks.Where(p => p.supervisor == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status == "Выполнена").Count() == 0)
+                        if (Model.tasks.Where(p => p.recipient == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status == "Выполнена").Count() == 0)
                         {
-                            <td>Нет задач</td>
+                            <td>-</td>
                         }
                         else
                         {
                             <td>
-                                @foreach (Task task1 in Model.tasks.Where(p => p.status == "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.supervisor == staff.name))
+                            @foreach (Task task1 in Model.tasks.Where(p => p.status == "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.recipient == staff.name))
+                            { 
+                                    <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="2" asp-route-Taskid="@task1.id">
+                                        <button type="submit">@task1.desc</button>
+                                    </a>
+                            }
+                            </td>
+                        }
+
+                        if (Model.tasks.Where(p => p.supervisor == staff.name).Where(p => p.recipient != null).Where(p => p.date == Taskss[j].date).Where(p => p.status == "Выполнена").Count() == 0)
+                        {
+                            <td>-</td>
+                        }
+                        else
+                        {
+                            <td>
+                                @foreach (Task task1 in Model.tasks.Where(p => p.status == "Выполнена").Where(p => p.recipient == null).Where(p => p.date == Taskss[j].date).Where(p => p.supervisor == staff.name))
                                 {
                                     <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="2" asp-route-Taskid="@task1.id">
                                         <button type="submit">@task1.desc</button>
@@ -57,26 +73,42 @@
             <tr id="title">
                 <th colspan="@(Model.projects.Count()+2)" style="text-align:left ;background-color:#cccccc">Задачи на сегодня</th>
             </tr>
-            List<Tasks> Taskss = Model.tasks.Where(p => p.date.Date <= DateTime.Now.Date).Where(p => p.status != "Выполнена").OrderBy(p => p.date).ToList();
+            List<Tasks> Taskss = Model.tasks.Where(p => p.date.Date <= DateTime.Now.Date).Where(p => p.status != "Выполнена").OrderBy(p => p.priority).ToList();
             for (int j = 0; j < Taskss.Count(); j++)
             {
                 if (j + 1 != Taskss.Count() && Taskss[j].date.Date == Taskss[j + 1].date.Date) continue;
                 <tr id="task">
-                    <th colspan="2">@Taskss[j].date.ToShortDateString()</th>
+                    <th colspan="2">@Taskss[j].date.Date.ToString(@"dd\.MM\.yyyy")</th>
                     @foreach (Staff staff in Model.staffsTable.OrderBy(p => p.name))
                     {
-                        if (Model.tasks.Where(p => p.supervisor == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status != "Выполнена").Count() == 0)
+                        if (Model.tasks.Where(p => p.recipient == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status != "Выполнена").Count() == 0)
                         {
-                            <td>Нет задач</td>
+                            <td>-</td>
                         }
                         else
                         {
                             <td>
-                                @foreach (Task task1 in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.supervisor == staff.name))
-                                {
+                            @foreach (Task task1 in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.recipient == staff.name))
+                            { 
                                     <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="2" asp-route-Taskid="@task1.id">
                                         <button type="submit">@task1.desc</button>
                                     </a>
+                            }
+                            </td>
+                        }
+
+                        if (Model.tasks.Where(p => p.supervisor == staff.name).Where(p => p.recipient != null).Where(p => p.date == Taskss[j].date).Where(p => p.status != "Выполнена").Count() == 0)
+                        {
+                            <td>-</td>
+                        }
+                        else
+                        {
+                            <td>
+                                @foreach (Task task1 in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.recipient == null).Where(p => p.date == Taskss[j].date).Where(p => p.supervisor == staff.name))
+                                {
+                                    <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="2" asp-route-Taskid="@task1.id">
+                                        <button type="submit">@task1.desc</button>
+                                    </a> 
                                 }
                             </td>
                         }
@@ -94,17 +126,33 @@
             {
                 if (j + 1 != Taskss.Count() && Taskss[j].date.Date == Taskss[j + 1].date.Date) continue;
                 <tr id="task">
-                    <th colspan="2">@Taskss[j].date.ToShortDateString()</th>
+                    <th colspan="2">@Taskss[j].date.Date.ToString(@"dd\.MM\.yyyy")</th>
                     @foreach (Staff staff in Model.staffsTable.OrderBy(p => p.name))
                     {
-                        if (Model.tasks.Where(p => p.supervisor == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status != "Выполнена").Count() == 0)
+                        if (Model.tasks.Where(p => p.recipient == staff.name).Where(p => p.date == Taskss[j].date).Where(p => p.status != "Выполнена").Count() == 0)
                         {
-                            <td>Нет задач</td>
+                            <td>-</td>
                         }
                         else
                         {
                             <td>
-                                @foreach (Task task1 in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.supervisor == staff.name))
+                            @foreach (Task task1 in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date == Taskss[j].date).Where(p => p.recipient == staff.name))
+                            { 
+                                    <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="2" asp-route-Taskid="@task1.id">
+                                        <button type="submit">@task1.desc</button>
+                                    </a>
+                            }
+                            </td>
+                        }
+
+                        if (Model.tasks.Where(p => p.supervisor == staff.name).Where(p => p.recipient != null).Where(p => p.date == Taskss[j].date).Where(p => p.status != "Выполнена").Count() == 0)
+                        {
+                            <td>-</td>
+                        }
+                        else
+                        {
+                            <td>
+                                @foreach (Task task1 in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.recipient == null).Where(p => p.date == Taskss[j].date).Where(p => p.supervisor == staff.name))
                                 {
                                     <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="2" asp-route-Taskid="@task1.id">
                                         <button type="submit">@task1.desc</button>
